# rpc_parallel

./: .gitignore  BUILD.bazel  WORKSPACE  WORKSPACE.bazel
bzl/: config.bzl  obazl.edn  opam.bzl
bzl/config/: BUILD.bazel
bzl/ppx/: BUILD.bazel
bzl/rpc_parallel/: config.bzl
bzl/tools/: user.bazelrc.tpl
example/: BUILD.bazel
expect_test/: BUILD.bazel  BUILD.bzl
src/: BUILD.bazel  dune  parallel.ml  utils.ml
