load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

package(default_visibility = ["//visibility:public"])

bool_flag( name = "always_link", build_setting_default = False)

bool_flag( name = "debug", build_setting_default = False)

bool_flag( name = "optimize", build_setting_default = False)

bool_flag( name = "verbose", build_setting_default = False)
